force-app/main/default/objects/Enter_the_label_name__c/Enter_the_label_name__c.object-meta.xml
<CustomObject>
    <description>Manages promotions &amp; campaigns</description>
    <label>Marketing Campaign</label>
    <nameField>
        <displayFormat>MC -{0000}</displayFormat>
        <label>Marketing Campaign Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>