force-app/main/default/objects/Enter_the_label_name__c/fields/campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Name__c</fullName>
    <label>Campaign_Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>