force-app/main/default/objects/Enter_the_label_name__c/fields/HandsMen_Customer__c.field-meta.xml
<CustomField>
    <fullName>HandsMen_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HandsMen Customer</label>
    <referenceTo>HandsMen_Customer__c</referenceTo>
    <relationshipLabel>Marketing Campaigns</relationshipLabel>
    <relationshipName>Marketing_Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>